# rahasyam

./: .dockerignore  .env  .gitignore  Cargo.toml  README.md  docker-compose.dev-infra.yml  docker-compose.dev-override.yml  docker-compose.override.yml  docker-compose.yml  foundry.toml  nightfall.toml
.cargo/: config.toml
.github/workflows/: on-pull-request.yml
anvil/: Dockerfile  entrypoint.sh
blockchain_assets/contracts/: Nightfall.sol  RoundRobin.sol
blockchain_assets/contracts/proof_verification/: IRollupVerifier.sol  MockVerifier.sol  ProofSystemRouter.sol  RollupProofVerifierV2.sol
blockchain_assets/contracts/proof_verification/lib/: Bls12381.sol  (+2 more)
blockchain_assets/script/: deployer.s.sol
blockchain_assets/test_contracts/: Nightfall_ProposeBlock.t.sol  Nightfall_V2_t.sol  NovaRollupVerifierTest.t.sol  ProofSystemRouter.t.sol  RollupProofVerifierTest.t.sol  RollupProofVerifier_V2.t.sol  RoundRobin.t.sol  RoundRobin_V2.t.sol
blockchain_assets/test_contracts/nova_committee/: DevCommitteeKeysetTest.t.sol  DevCommitteeVectors.sol  DevDeployTomlTest.t.sol  NovaCommitteeVectors.sol  NovaCommitteeVerifierTest.t.sol
configuration/: Dockerfile
configuration/src/: addresses.rs  logging.rs  settings.rs
doc/: CHANGELOG.md  Setup Testnet Guide.md  nf_4.md
doc/Plume_Testnet_Docs/: plume_testnet_proposer_playbook.md
lib/: Cargo.toml
lib/examples/: bls_committee_keygen.rs
lib/fuzz/: Cargo.toml
lib/fuzz/fuzz_targets/: fuzz_append_only.rs  fuzz_indexed.rs  fuzz_poseidon.rs
lib/src/: build_transfer_inputs.rs  circuit_key_generation.rs  client_models.rs  deposit_circuit.rs  deposit_witness.rs  derive_key.rs  error.rs  lib.rs  log_fetcher.rs  nf_client_proof.rs  rollup_circuit_checks.rs  serialization.rs  shared_entities.rs  utils.rs  validate_certificate.rs  validate_keys.rs  verify_contract.rs
lib/src/merkle_trees/: indexed.rs  mutable.rs  trees.rs
lib/src/plonk_prover/: mod.rs  plonk_proof.rs
lib/src/plonk_prover/circuits/: mod.rs  unified_circuit.rs
lib/src/plonk_prover/circuits/verify/: verify_commitments_gadgets.rs  verify_nullifiers_gadgets.rs
lib/src/proving/: mod.rs  registry.rs
lib/src/proving/nova_v1/: attestation.rs  bls.rs  client_engine.rs  commitment_tree.rs  hash.rs  ivc_integration_tests.rs  keys.rs  merkle.rs  mod.rs  proof.rs  proposer_repro_tests.rs  r1cs_export.rs  rollup_engine.rs  step_circuit.rs  witness.rs
lib/src/proving/plonk_v1/: keys.rs  mod.rs  rollup_engine.rs
lib/src/proving/ultrahonk_v1/: client_engine.rs  mod.rs  proof.rs  tests.rs  witness.rs
lib/src/proving/ultrahonk_v1/fixtures/: transfer.json
lib/src/test_helpers/: mocks.rs
nightfall_attestor/: Cargo.toml  Dockerfile
nightfall_attestor/src/: lib.rs  main.rs
nightfall_client/: Cargo.toml  Dockerfile
nightfall_client/benches/: bench_unified_circuit.rs
nightfall_client/src/: lib.rs  main.rs
nightfall_client/src/domain/: entities.rs  error.rs
nightfall_client/src/driven/: queue.rs
nightfall_client/src/driven/contract_functions/: nightfall_contract.rs
nightfall_client/src/driven/db/: mongo.rs
nightfall_client/src/driven/event_handlers/: nightfall_event.rs
nightfall_client/src/driven/plonk_prover_tests/: unified_circuit_tests.rs
nightfall_client/src/drivers/blockchain/: nightfall_event_listener.rs
nightfall_client/src/drivers/rest/: balance.rs  client_nf_3.rs  client_operation.rs  commitment.rs  mod.rs  proposers.rs  request_status.rs  synchronisation.rs  token_info.rs  withdraw.rs
nightfall_client/src/ports/: contracts.rs  db.rs  trees.rs
nightfall_client/src/services/: client_operation.rs  commitment_selection.rs  mod.rs  swap_expiry.rs
nightfall_client/tests/: api_stateful.rs
nightfall_deployer/: Cargo.toml  Dockerfile  build.rs
nightfall_deployer/src/: deployment.rs  main.rs
nightfall_proposer/: Cargo.toml  Dockerfile
nightfall_proposer/benches/: bench_deposit.rs
nightfall_proposer/src/: lib.rs  main.rs
nightfall_proposer/src/domain/: entities.rs  error.rs
nightfall_proposer/src/driven/: attestor_client.rs  block_assembler.rs  mock_prover.rs  mod.rs  nightfall_client_transaction.rs  nightfall_contract.rs  nightfall_event.rs  nova_prover.rs  nova_prover_e2e_tests.rs  rollup_prover.rs  speculative_state.rs  tree_snapshot.rs  unified_deposit_prover.rs
nightfall_proposer/src/driven/db/: mongo_db.rs
nightfall_proposer/src/driven/proving/: mod.rs
nightfall_proposer/src/drivers/blockchain/: block_assembly.rs  event_listener_manager.rs  nightfall_event_listener.rs
nightfall_proposer/src/drivers/rest/: block_assembly.rs  block_data.rs  client_transactions.rs  mod.rs  proposers.rs  synchronisation.rs
nightfall_proposer/src/ports/: db.rs  proving.rs  trees.rs
nightfall_proposer/src/services/: assemble_block.rs  mod.rs  selected_transactions.rs
nightfall_sync_test/: Dockerfile
nightfall_test/: Cargo.toml  Dockerfile
nightfall_test/src/: main.rs  run_tests.rs  test.rs  test_settings.rs
ultrahonk/: .gitignore  LICENSE  README.md
ultrahonk/circuits/client_tx/: Nargo.toml  Prover.toml
ultrahonk/circuits/client_tx_v2/: Nargo.toml
ultrahonk/noir/: Nargo.toml
ultrahonk/noir/src/: bjj.nr  client.nr  deposit.nr  domains.nr  hash.nr  kemdem.nr  keys.nr  lib.nr  merkle.nr  note.nr  notev2.nr  script.nr  sponge.nr  statement.nr  statement_v2.nr  statement_v2_vectors.nr  statement_vectors.nr  tests.nr  vectors.nr
ultrahonk/rust/: Cargo.toml
ultrahonk/rust/examples/: anchor_sha256.rs  anchor_sponge.rs  gen_statement.rs  gen_statement_v2.rs  gen_vectors.rs
ultrahonk/rust/src/: lib.rs  notev2.rs  statement.rs  statement_v2.rs
ultrahonk/rust/src/predvm/: auth.rs  eval.rs  mod.rs  opcode.rs  timehash.rs
ultrahonk/rust/tests/: parity.rs  statement_parity.rs
ultrahonk/scripts/: verify-all.sh
ultrahonk/ts/: package-lock.json  package.json  tsconfig.json  verify_e2e.mjs
ultrahonk/ts/src/: index.ts
ultrahonk/vectors/: client_ref.json
ultrahonk_sidecar/: README.md  package-lock.json  package.json  prove.mjs  sidecar_lib.mjs  test_transfer.mjs  verify.mjs
ultrahonk_sidecar/vectors/: statement.json
(+5 files in other folders)
