[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
nova-v1 = ["dep:nova-snark", "dep:ff", "dep:generic-array"]
# UltraHonk client proofs are paired with the existing Nova rollup engine.
ultra-honk-v1 = ["nova-v1"]
# Off-chain BLS12-381 signing for the Nova attestor committee (plan B3).
# Pulls in `blst` (a C dependency); kept optional so builds that don't need
# committee signing are unaffected.
nova-bls = ["nova-v1", "dep:blst"]

[dependencies]
tokio-util = "0.7.16"
anyhow = "1.0.100"
bip32 = { version = "0.4.0", features = ["bip39"] }
itertools = "0.14.0"
hex-literal = "1.1.0"
eyre = "0.6.12"
ff_ce = "0.11.0"
serde_json = "1.0.143"
reqwest = { version = "0.11.27", features = ["json", "blocking", "stream"] }
warp = "0.3.7"
async-trait = "0.1.88"
hex = "0.4.3"
dotenv = "0.15.0"
x509-parser = "0.16.0"
openssl = "0.10.72"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
alloy = { version = "1.0.23", features = ["full", "json-rpc"] }
tokio = { version = "1.45.0", features = ["full"] }
configuration = { path = "../configuration" }
nightfall_bindings = {path = "../nightfall_bindings"}
toml = "0.8.22"
ark-poly = { version = "0.4.2", features = ["parallel"] }
ark-serialize = "0.4.2"
ark-std = { version = "0.4.0", default-features = false }
ark-bn254 = "0.4.0"
ark-grumpkin = "0.6.0"
alloy-rlp = "0.3.12" 
jf-plonk = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", features = [
    "test-srs",
] }
jf-relation = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git" }
jf-primitives = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git" }
jf-utils = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", features = [
    "parallel",
] }
nf-curves = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git" }
ark-ec = { version = "0.4.2", features = ["parallel"] }
num-bigint = "0.4.6"
num = "0.4.3"
ark-ff = { version = "0.4.2", features = ["parallel"] }
mongodb = "3.2.3"
rand = "0.8"
serde = "1.0.219"
sha2 = "0.10"
sha3 = "0.10.8"
log = "0.4.27"
url = "2.5.4"
testcontainers = { version = "0.24.0", features = ["blocking"] }
futures = "0.3.31"
azure_identity = "0.21.0"
azure_security_keyvault = "0.21.0"
bincode = "1.3.3"
base64 = "0.22.1"
zeroize = { version = "1.6", features = ["derive"] }
nova-snark = { version = "0.71.1", optional = true, default-features = false, features = ["io", "test-utils"] }
ff = { version = "0.13", optional = true, features = ["derive"] }
# Matches nova-snark 0.71.1's transitive dep so the `typenum::U2` arity tags
# we hand to `PoseidonConstants` resolve to the same types nova-snark itself
# instantiates internally. Bump in lockstep with nova-snark upgrades.
generic-array = { version = "1.4", optional = true }
# Off-chain BLS12-381 signing for the Nova attestor committee (plan B3).
# Byte encodings match the on-chain EIP-2537 verifier (`Bls12381.sol`).
blst = { version = "0.3", optional = true }
[build-dependencies]
configuration = { path = "../configuration" }
tokio = { version = "1.45.0", features = ["full"] }
jf-primitives = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git" }
jf-plonk = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", features = [
    "test-srs",
] }


[dev-dependencies]
url = "2.5.4"
serde_json = "1.0.140"
tempfile = "3.10"

[[example]]
name = "bls_committee_keygen"
required-features = ["nova-bls"]
