[package]
name = "nightfall_attestor"
version = "0.1.0"
edition = "2021"

[dependencies]
configuration = { path = "../configuration" }
lib = { path = "../lib", features = ["nova-v1"] }
alloy = { version = "1.0.23", features = ["full"] }
tokio = { version = "1.45.0", features = ["full"] }
warp = "0.3.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4.27"
hex = "0.4.3"
bincode = "1.3.3"

[dev-dependencies]
serial_test = "3.2.0"
