[package]
name = "nightfall_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-util = "0.7.16"
once_cell = "1"
tracing = "0.1.41"
jf-relation = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git" }
ark-bn254 = "0.4.0"
ark-ff = { version = "0.4.2", features = ["parallel"] }
bip32 = { version = "0.4.0", features = ["bip39"] }
num-bigint = "0.4.6"
num = "0.4.3"
ark-ec = { version = "0.4.2", features = ["parallel"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
ark-serialize = "0.4.2"
sha3 = "0.10.8"
sha2 = "0.10"
alloy = { version = "1.0.23", features = ["transport-ws", "json-rpc", "serde"] }
warp = "0.3.7"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
criterion = "0.4"
serde_json = "1.0.140"
rand = "0.8"
ark-std = { version = "0.4.0", default-features = false }
itertools = { version = "0.10.5", default-features = false }
arkworks-utils = "1.0.1"
mongodb = "3.2.3"
futures = "0.3.31"
async-trait = "0.1.88"
jf-plonk = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", features = [
    "test-srs",
] }
jf-utils = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", features = [
    "parallel",
] }
jf-primitives = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git" }
num-traits = "0.2.19"
byteorder = "1.5.0"
hex = "0.4.3"
serde_repr = "0.1.20"
serde_bytes = "0.11"
serde_with = "2.3.3"
config = "0.13.4"
configuration = { path = "../configuration" }
nightfall_bindings = { path = "../nightfall_bindings" }
log = "0.4.27"
nf-curves = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git" }
reqwest = "0.11.27"
url = "2.5.4"
rustc-hex = "2.1.0"
uint = "0.9.5"
lazy_static = "1.5.0"
testcontainers = { version = "0.24.0", features = ["blocking"] }
lib = { path = "../lib" }
uuid = { version = "1.16.0", features = ["v4"] }
ark-crypto-primitives = { version = "0.4", features = ["sponge"] }
# jemalloc gives significantly better memory behaviour (lower RSS, less
# fragmentation) for workloads that do a lot of large, short-lived
# allocations like the Plonk recursive prover. The client swap path was
# OOMing at 8 GiB on the default glibc allocator; switching to jemalloc
# measurably cuts peak working-set for the witness + quotient polys
# during `FFTPlonk::recursive_prove`.
jemallocator = "0.5"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
httparse = "1.10.1"
serial_test = "0.5.1"

[[bench]]
name = "poseidon_hash_gadgets_bench"
harness = false

[[bench]]
name = "bench_unified_circuit"
harness = false

[features]
default = ["parallel"]
std = ["ark-std/std", "ark-serialize/std", "ark-ff/std", "ark-ec/std"]
test_apis = [] # exposing apis for testing purpose
nova-v1 = ["lib/nova-v1"]
# UltraHonk client proofs run on the Nova path; enable this crate's own
# `nova-v1` cfg too so the NovaV1 runtime arm is compiled in (fail-fast parity
# with `lib/nova-v1`), not just the lib feature.
ultra-honk-v1 = ["nova-v1", "lib/ultra-honk-v1"]
parallel = [
    "ark-ff/parallel",
    "ark-ec/parallel",
    "jf-utils/parallel",
    "jf-relation/parallel",
    "jf-primitives/parallel",
]
