[package]
name = "nightfall_deployer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "key_generation"
path = "bin/key_generation.rs"


[dependencies]
serde_json = "1.0.143"
jf-utils = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", features = [
    "parallel",
] }
anyhow = "1.0.99"
regex = "1.11.2"
itertools = "0.10.5"
dotenv = "0.15.0"
alloy = { version = "1.0.23", features = ["full"] }
alloy-node-bindings =  "1.0.23"
tokio = { version = "1.45.0", features = ["full"] }
ethers-solc = "2.0.14"
configuration = { path = "../configuration" }
nightfall_bindings = { path = "../nightfall_bindings" }
lib = { path = "../lib" }
nightfall_test = { path = "../nightfall_test" }
toml = "0.8.22"
serde = "1.0.219"
log = "0.4.27"
warp = "0.3.7"
sha2 = "0.10"
nightfall_client = { path = "../nightfall_client" }
nightfall_proposer = { path = "../nightfall_proposer" }
ark-serialize = "0.4.2"
ark-std = { version = "0.4.0", default-features = false }
ark-bn254 = "0.4.0"
jf-plonk = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", features = [
    "test-srs",
] }
jf-relation = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git" }
jf-primitives = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git" }
nf-curves = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git" }
ark-ec = { version = "0.4.2", features = ["parallel"] }
ark-ff = { version = "0.4.2", features = ["parallel"] }
ark-poly = { version = "0.4.2", features = ["parallel"] }
num-bigint = "0.4.6"
reqwest = { version = "0.11.27", features = ["json", "blocking"] }
url = "2.5.4"

[build-dependencies]
configuration = { path = "../configuration" }
log = "0.4.27"

[dev-dependencies]
url = "2.5.4"
sha3 = "^0.10"
jf-utils = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", features = [
    "parallel",
] }
ark-ed-on-bn254 = "0.4.0"
hex = "0.4.3"
[features]
test-srs = ["jf-plonk/test-srs"]
nova-v1 = ["lib/nova-v1", "nightfall_proposer/nova-v1"]
