[package]
name = "nightfall_proposer"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.41"
bson = "2.15.0"
ark-bn254 = "0.4.0"
ark-poly = { version = "0.4.2", features = ["parallel"] }
ark-ff = { version = "0.4.2", features = ["parallel"] }
ark-ed-on-bn254 = "0.4.0"
ark-ec = { version = "0.4.2", features = ["parallel"] }
nightfall_bindings = {path = "../nightfall_bindings"}
alloy = { version = "1.0.23", features = ["full"] }
ark-serialize = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio-stream = "0.1.17"
serde_json = "1.0.140"
serde_repr = "0.1.20"
serde_bytes = "0.11"
serde_with = "2.3.3"
num-bigint = "0.4.6"
sha3 = "0.10.8"
futures = "0.3.31"
configuration = { path = "../configuration" }
lib = { path = "../lib" }
tokio = { version = "1.45.0", features = ["full"] }
log = "0.4.27"
warp = "0.3.7"
async-trait = "0.1.88"
mongodb = "3.2.3"
rayon = "1.10"
ark-std = { version = "0.4.0", default-features = false, features = [
    "parallel",
] }
hex = "0.4.3"
either = "1.15.0"
lazy_static = "1.5.0"
jf-primitives = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git" }
testcontainers = { version = "0.24.0", features = ["blocking"] }
url = "2.5.4"
jf-relation = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git" }
jf-plonk = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", features = [
    "test-srs",
] }
jf-utils = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", features = [
    "parallel",
] }
nf-curves = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git" }
itertools = { version = "0.10.5", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
ff = { version = "0.13.0", optional = true }
bincode = "1.3.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
serial_test = "3.2.0"

[features]
nova-v1 = ["lib/nova-v1", "ff"]
parallel = ["ark-std/parallel", "ark-ff/parallel", "ark-poly/parallel", "ark-ec/parallel"]

